# engivault-api

./: .dockerignore  .eslintrc.js  .gitignore  API_CONNECTION_GUIDE.md  ARCHITECTURE.md  BETA-TESTING.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backup  EQUIPMENT_SIZING_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  PRICING_PLANS.md  README.md  RELEASE-NOTES-v1.0.0.md  REPOSITORY_REVIEW.md  REVIEW_SUMMARY.md  ROADMAP.md  SAAS_DEPLOYMENT_GUIDE.md  SAAS_IMPLEMENTATION_SUMMARY.md  START_HERE.md  TESTING_GUIDE.md  WHATS_NEW.md  build.ts  debug-pressure.js  debug.js  docker-compose.yml  env.example  package-lock.json  package.json  railway-variables.json  tsconfig.json  tsconfig.json.backup  vitest.config.ts
.github/workflows/: publish-packages.yml
clients/: README.md
clients/py/: README.md  __init__.py  client.py  example.py  models.py  setup.py
clients/py/engivault_py_sdk.egg-info/: PKG-INFO  SOURCES.txt
clients/ts/: README.md  example.ts  index.ts  package-lock.json  package.json
clients/ts/core/: OpenAPI.ts
clients/ts/models/: def_0.ts  def_1.ts  def_2.ts  def_3.ts
clients/ts/services/: DefaultService.ts  DemoService.ts  DynamicsService.ts  FlowFittingsService.ts  GasFlowService.ts  GasService.ts  HealthService.ts  HydraulicsService.ts  MonitoringService.ts  NetworksService.ts  NpshService.ts  OperationsService.ts  PumpSystemCurveService.ts  PumpsService.ts  RheologyService.ts  ThermalService.ts  TransientsService.ts  UtilitiesService.ts  ValvesService.ts
excel-addin/: README.md  manifest.xml  package.json  tsconfig.json  webpack.config.js
excel-addin/src/commands/: commands.html  commands.js
excel-addin/src/functions/: functions.html  functions.json  functions.ts
excel-addin/src/taskpane/: taskpane.css  taskpane.html  taskpane.js
excel-integration/: ADVANCED_FEATURES.md  DEPLOYMENT_PACKAGE.md  README.md
excel-integration/documentation/: Fluid_Mechanics_Guide.md  Formula_Tab_Integration.md  Function_Reference.md  Heat_Transfer_Guide.md  Installation_Guide.md
excel-integration/examples/: Heat_Transfer_Examples.md  Simple_Examples.md
excel-integration/templates/: EngiVault_Heat_Transfer_Template.md  EngiVault_Pipe_Sizing_Template.md  EngiVault_Pump_Analysis_Template.md
excel-integration/vba-modules/: EngiVaultAPI.bas  EngiVaultAPI_Enhanced.bas  EngiVaultAutomation.bas  EngiVaultCharts.bas  EngiVaultEquipmentSizing.bas  EngiVaultFluidMechanics.bas  EngiVaultHeatTransfer.bas  EngiVaultHelpers.bas  EngiVault_Installer.bas
launcher/: IMPLEMENTATION_SUMMARY.md  INSTALLER_IMPLEMENTATION.md  README.md  SETUP.md  build.sh  main-full.js  main-simple.js  main-test.js  main.js  package-lock.json  package.json  preload.js  start.bat  start.sh  test.html
launcher/renderer/: app.js  index.html  styles.css
launcher/scripts/: prepare-build.js
launcher/src/installers/: excel-installer.js  (+4 more)
prisma/: schema.prisma
python-sdk/: MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  setup.py  test_fluid_mechanics.py  test_heat_transfer.py  test_sdk.py
python-sdk/engivault/: __init__.py  cli.py  client.py  exceptions.py  models.py  shortcuts.py
python-sdk/engivault/analytics/: __init__.py
python-sdk/engivault/equipment_sizing/: __init__.py  heat_exchanger_sizing.py  piping_sizing.py  pump_sizing.py  vessel_sizing.py
python-sdk/engivault/fluid_mechanics/: __init__.py
python-sdk/engivault/heat_transfer/: __init__.py
python-sdk/engivault/hydraulics/: __init__.py
python-sdk/engivault/pumps/: __init__.py
python-sdk/examples/: advanced.py  advanced_usage.py  basic_usage.py  quickstart.py
python-sdk/tests/: test_hydraulics.py  test_shortcuts.py
scripts/: generate-sdk.js
src/: index.ts
src/config/: environment.ts
src/data/: k-factors.test.ts  k-factors.ts  materials.ts
src/knowledge/: index.ts
src/logic/: calculations.ts  curves.test.ts  curves.ts  energy.test.ts  energy.ts  equipmentSizing.ts  flowFittings.test.ts  flowFittings.ts  fluidMechanics.ts  fluidProperties.test.ts  fluidProperties.ts  friction.test.ts  friction.ts  gas.test.ts  gas.ts  heatTransfer.ts  hx.test.ts  hx.ts  minorLosses.test.ts  minorLosses.ts  networks.test.ts  networks.ts  npsh.test.ts  npsh.ts  operatePoint.test.ts  operatePoint.ts  operations.ts  pressureDrop.test.ts  pressureDrop.ts  pressureProfile.test.ts  pressureProfile.ts  pumpSystemCurve.test.ts  pumpSystemCurve.ts  pumps.test.ts  pumps.ts  relief.test.ts  relief.ts  sizing.test.ts  sizing.ts  slurries.test.ts  (+10 more)
src/props/: index.test.ts  index.ts
src/routes/: analytics.ts  auth.ts  calculations.ts  cavitationRisk.test.ts  cavitationRisk.ts  curves.test.ts  curves.ts  dynamics.test.ts  dynamics.ts  energy.test.ts  energy.ts  equipmentSizing.ts  errorHelperDemo.ts  flowFittings.ts  fluidMechanics.ts  gas.test.ts  gas.ts  health.test.ts  heatTransfer.ts  hx.test.ts  hx.ts  hydraulics.test.ts  hydraulics.ts  index.ts  knowledge.ts  materials.ts  metrics.test.ts  metrics.ts  minorLosses.test.ts  minorLosses.ts  networks.test.ts  networks.ts  npsh.ts  npshRequired.ts  operatePoint.test.ts  operatePoint.ts  operations.test.ts  operations.ts  performance.test.ts  pressureDrop.ts  (+19 more)
src/schemas/: common.test.ts  common.ts  index.ts  validation.ts
src/scripts/: initDatabase.ts  seed.ts
src/services/: runs.test.ts  runs.ts
src/types/: fastify.d.ts  index.ts  project.ts  shared.test.ts  shared.ts
src/utils/: auth.ts  batchProcessor.test.ts  batchProcessor.ts  cache.test.ts  cache.ts  database.ts  errorHandler.test.ts  errorHandler.ts  errorHelper.test.ts  errorHelper.ts  guardrails.test.ts  guardrails.ts  index.ts  logger.test.ts  logger.ts  metrics.test.ts  metrics.ts  middleware.ts  schemaConverter.ts  transcriptDecorator.ts  units.test.ts  units.ts  userCalculationTracker.ts
tests/: helper.ts
tests/golden/: gas-pressure-drop.spec.ts  pressure-profile.spec.ts  pumps-operate.spec.ts  rheology-pressure-drop.spec.ts  valves-size.spec.ts
wiki/: API-Reference.md  Fluid-Mechanics-Module.md  Heat-Transfer-Module.md  Home.md  Hydraulics-Module.md  Mathematical-Foundations.md  Pumps-Module.md
(+28 files in other folders)
